# AUT-Trax-Player

./: .gitignore  CMakeLists.txt  README.md  contributors.txt
doc/: fpt15-competition.md
sample/: CMakeLists.txt  ai.c  ai.h  board.c  board.h  game.c  game.h  main.c  player.h  ui.c  ui.h
src/: AI.c  AI.h  CMakeLists.txt  game.c  game.h  limits.h  main.c  string.h  traxboard.c  traxboard.h  traxcore.c  traxcore.h  traxmove.c  traxmove.h
